web/saito/cssx-imports/saito-chat.css
.chat-manager {
  margin: 0 0 0 1.5rem;
}

.chat-manager .saito-userline {
  text-overflow: ellipsis;
  overflow: hidden;
  width: 13rem;
  white-space: nowrap;
}

.chat-manager .saito-user {
  column-gap: 2rem;
  margin-bottom: 0.5rem;
}

/*  chat / Popup  */
.chat-container {
  margin-right: 1rem;
  height: 66rem;
  width: 44rem;
  border-radius: 0.5rem;
  z-index: 1000;
  position: fixed;
  bottom: 0px;
  right: 0px;
  border: 1px solid var(--saito-border-color);
  background: var(--saito-white);
  color: var(--saito-font-color);
}

.chat-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid var(--saito-border-color);
  background: var(--saito-gray-transparent);
  cursor: grab;
}

.chat-header > i {
  margin: 0;
  padding: 1.2rem;
  color: var(--saito-primary);
  font-size: 2rem;
  display: inline-block;
  position: relative;
  transition: all 0.2s;
}

.chat-header > i:last-child {
  padding-bottom: 1.3rem;
  cursor: pointer;
}

.chat-header > i:last-child:hover {
  transform: rotate(90deg) scale(1.1);
}

.chat-body {
  padding: 1rem;
  display: block;
  height: calc(100% - 10.4rem);
  overflow: auto;
  margin-bottom: 5.8rem;
}

.chat-body > .saito-user {
  padding-bottom: 1rem;
  cursor: default;
  grid-template-rows: min-content 1fr;
}

.chat-body > .saito-user > .saito-userline {
  font-size: 1.7rem;
}

.chat-body .saito-userline {
  overflow-wrap: anywhere;
}

.chat-footer {
  background-color: var(--saito-background-light);
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 0.5rem;
  border-top: var(--saito-border-color);
  display: grid;
  grid-template-columns: 1fr max-content;
  grid-gap: 1rem;
  align-items: center;
  z-index: 2;
}

.chat-footer input {
  height: 3rem;
  padding-left: 1rem;
  border: none;
  outline: none;
}

.chat-footer i {
  color: var(--saito-primary);
  cursor: pointer;
  z-index: 2;
  transition: all 0.2s;
  font-size: 2rem;
}

.chat-footer i:hover {
  transform: rotate(45deg);
}

